--- a/Angkring/user-main-page.html
+++ b/Angkring/user-main-page.html
@@ -15,7 +15,7 @@
 </head>
 <body style="background-color: rgba(132, 232, 65, 0.5);">
     <!-- navbar -->
-    <nav class="navbar sticky-top  navbar-light justify-content-center" style="background-color: rgb(255,255,255); ">
+    <nav class="navbar sticky-top  navbar-light justify-content-center" style="background-color: rgb(255,255,255,0.9); ">
         <div class="container-fluid">    
           <a class="navbar-brand" href="#"><img src="image/angkring logo.png" class="d-inline-block " alt="logo" style="width: 60px; font-family: 'Lobster', cursive;"></a>
           <h3 style="font-family: 'lobster', cursive;">Angkring</h3>
@@ -23,7 +23,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" style="align-items:center ;" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Appetizer</a> 
