--- a/Angkring/allmenu.html
+++ b/Angkring/allmenu.html
@@ -25,22 +25,22 @@
 
         <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
             <ul class="navbar-nav ">
-                <li class="nav-item">
+                <li class="nav-item ml-auto">
                     <a class="nav-link" href="#">Appetizer</a> 
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-auto">
                     <a class="nav-link" href="#">Main Course</a> 
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-auto">
                     <a class="nav-link" href="#">Dessert</a> 
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-auto">
                     <a class="nav-link" href="#">Beverage</a> 
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-auto">
                     <a class="nav-link" href="#">   </a> 
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ml-auto">
                   <a class="btn btn-outline-success my-2 my-sm-0 active" href="index cp.html" role="button">Home</a>
                 </li>
             </ul>
