--- a/Angkring/checkout.html
+++ b/Angkring/checkout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style-allmenu.css">
+    <link rel="stylesheet" href="style-checkout.css">
     <link rel="stylesheet" href="animate.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -20,7 +20,7 @@
         <div class="container-fluid">    
           <a class="navbar-brand" href="#"><img src="image/angkring logo.png" class="d-inline-block " alt="logo" style="width: 60px;"></a>
           <h3 class="ml-auto fadeInDown animated delay-1s" style="font-family: 'lobster', cursive; text-align: center;">Angkring</h3>
-          <a class="btn btn-primary pull-right ml-auto mr-2" href="checkout.html" role="button"><i class="fas fa-shopping-cart"></i></a>
+          <a class="btn btn-primary pull-right ml-auto mr-2" href="#" role="button"><i class="fas fa-shopping-cart"></i></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -309,7 +309,7 @@
       </div>
 
       <a href="user-main-page.html" class="btn btn-outline-success mt-3 mb-1 fabtn fadeInLeft animated" ><i class="fas fa-chevron-left"></i> Back</a>
-      <a href="user-main-page.html" class="btn mt-3 mb-1 greet-text fadeOutUp animated" > All Menu </a>
+      <a href="user-main-page.html" class="btn mt-3 mb-1 greet-text fadeOutUp animated" > Checkout </a>  
 
     <footer id="sticky-footer" class="mt-3 py-4 bg-light green-bg text-black-70">
         <div class="container text-center">
