--- a/Angkring/checkout.html
+++ b/Angkring/checkout.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">    
           <a class="navbar-brand" href="#"><img src="image/angkring logo.png" class="d-inline-block " alt="logo" style="width: 60px;"></a>
           <h3 class="ml-auto fadeInDown animated delay-1s" style="font-family: 'lobster', cursive; text-align: center;">Angkring</h3>
-          <a class="btn btn-primary pull-right ml-auto mr-2" href="#" role="button"><i class="fas fa-shopping-cart"></i></a>
+          <a class="btn btn-success pull-right ml-auto mr-2" href="index cp.html" role="button"><i class="fas fa-home"></i></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="#">   </a> 
                 </li>
                 <li class="nav-item ml-auto">
-                  <a class="btn btn-outline-success my-2 my-sm-0 active" href="index cp.html" role="button">Home</a>
+                  <a class="btn btn-outline-success my-2 my-sm-0 active" href="index cp.html" role="button"><i class="fas fa-home"></i> Home</a>
                 </li>
             </ul>
           </div>
@@ -308,7 +308,7 @@
         </div>
       </div>
 
-      <a href="user-main-page.html" class="btn btn-outline-success mt-3 mb-1 fabtn fadeInLeft animated" ><i class="fas fa-chevron-left"></i> Back</a>
+      <a href="user-main-page.html" class="btn btn-outline-danger mt-3 mb-1 fabtn fadeInLeft animated" ><i class="fas fa-chevron-left"></i> Back</a>
       <a href="user-main-page.html" class="btn mt-3 mb-1 greet-text fadeOutUp animated" > Checkout </a>  
 
     <footer id="sticky-footer" class="mt-3 py-4 bg-light green-bg text-black-70">
