--- a/Angkring/allmenu.html
+++ b/Angkring/allmenu.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">    
           <a class="navbar-brand" href="#"><img src="image/angkring logo.png" class="d-inline-block " alt="logo" style="width: 60px;"></a>
           <h3 class="ml-auto fadeInDown animated delay-1s" style="font-family: 'lobster', cursive; text-align: center;">Angkring</h3>
-          <a class="btn btn-primary pull-right ml-auto mr-2" href="checkout.html" role="button"><i class="fas fa-shopping-cart"></i></a>
+          <a class="btn btn-primary pull-right ml-auto mr-2" href="#" role="button" onclick="openNav()"><i class="fas fa-shopping-cart"></i></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -43,16 +43,78 @@
                     <a class="nav-link" href="#">   </a> 
                 </li>
                 <li class="nav-item ml-auto">
-                  <a class="btn btn-outline-success my-2 my-sm-0 active" href="index cp.html" role="button">Home</a>
+                  <a class="btn btn-outline-success my-2 my-sm-0 active" href="index cp.html" role="button"><i class="fas fa-home"></i> Home</a>
                 </li>
             </ul>
           </div>
           </nav>
         </div>
+
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div class="col">
+            <div class="row">
+                <h2 class="ml-2 text-muted"> <i class="fas fa-shopping-cart"></i> Your Cart</h2>
+            </div>
+              <div class="row">
+                  <div class="card ml-2 mb-3" style="width: 24rem; height: 7.17rem; ">
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <img src="image/steak.jpg" class="rounded card-img cart-img" alt="...">
+                        </div>
+                        <div class="col-md-8 pull-left">
+                          <div class="card-body">
+                            <button type="button" class="btn btn-danger float-top float-right" style="height:7.1rem; margin-top:-1.30rem; margin-right: -1.25rem;;">X</button>
+                            <h4 class="card-title txtB text-wrap" style="margin-left: -1.50rem;"><b> Beef Steak</b></h4>
+                            <p class="card-text text-muted" style="margin-left: -1.50rem;">Rp 50.000</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  <div class="card ml-2 mb-3" style="width: 24rem; height: 7.17rem; ">
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <img src="image/steak.jpg" class="rounded card-img cart-img" alt="...">
+                        </div>
+                        <div class="col-md-8 pull-left">
+                          <div class="card-body">
+                            <button type="button" class="btn btn-danger float-top float-right" style="height:7.1rem; margin-top:-1.30rem; margin-right: -1.25rem;;">X</button>
+                            <h4 class="card-title txtB text-wrap" style="margin-left: -1.50rem;"><b> Beef Steak</b></h4>
+                            <p class="card-text text-muted" style="margin-left: -1.50rem;">Rp 50.000</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  <div class="card ml-2 mb-3" style="width: 24rem; height: 7.17rem; ">
+                      <div class="row no-gutters">
+                        <div class="col-md-4">
+                          <img src="image/steak.jpg" class="rounded card-img cart-img" alt="...">
+                        </div>
+                        <div class="col-md-8 pull-left">
+                          <div class="card-body">
+                            <button type="button" class="btn btn-danger float-top float-right" style="height:7.1rem; margin-top:-1.30rem; margin-right: -1.25rem;;">X</button>
+                            <h4 class="card-title txtB text-wrap" style="margin-left: -1.50rem;"><b> Beef Steak</b></h4>
+                            <p class="card-text text-muted" style="margin-left: -1.50rem;">Rp 50.000</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+              <button type="button" class="btn btn-success checkbtn btn-sm" onclick="location.href='checkout.html';"> <i class="fas fa-shopping-cart"></i> Checkout</button>
+          </div>  
+        </div>
+
     <div class="row">
             <div class="col">
-                <div class="card mt-3 ml-3 sticky-top filter-oke fadeInLeft animated" style="background: rgba(156, 238, 101,0.2);">
-                    <article class="card-group-item" >
+                <div class="card mt-3 ml-3 sticky-top filter-oke fadeInLeft animated delay-1s" style="background: rgba(156, 238, 101,0.2);">
+                    <header class="card-header">
+                        <!-- <h6 class="title text-center font-weight-bold">Filter</h6> -->
+                        <a class="btn btn-link text-weight-bold text-center text-decoration-none" style=" font-size: 15pt;" data-toggle="collapse" href="#filtercollapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                          Filter
+                        </a>
+                      </header>   
+                  <div class="collapse" id="filtercollapse">
+                    <article class="card-group-item" >      
                       <header class="card-header">
                         <h6 class="title">Range input </h6>
                       </header>
@@ -106,9 +168,13 @@
                               <label class="custom-control-label" for="Check5">Snacks</label>
                           </div> <!-- form-check.// -->
                         </div> <!-- card-body.// -->
+                        <header class="card-header">
+                            <a class="btn btn-success ml-auto" href="#" role="button">Set Filter</a>
+                          </header>
                       </div>
                     </article> <!-- card-group-item.// -->
                   </div>
+                    </div>
             </div> 
         <div class="col-9">
             
@@ -301,14 +367,14 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
-              <button type="button" class="btn btn-primary"><i class="fas fa-utensils"></i>  Buy</button>
+                <button type="button" class="btn btn-primary" onclick="animateCSS('.carticon', 'rubberBand')"><i class="fas fa-shopping-cart carticon"></i> Add to Cart</button>
+                <a href="checkout.html" class="btn btn-primary" role="button" aria-pressed="false"><i class="fas fa-utensils buyicon"></i>  Buy</a>
             </div>
           </div>
         </div>
       </div>
 
-      <a href="user-main-page.html" class="btn btn-outline-success mt-3 mb-1 fabtn fadeInLeft animated" ><i class="fas fa-chevron-left"></i> Back</a>
+      <a href="user-main-page.html" class="btn btn-outline-danger mt-3 mb-1 fabtn fadeInLeft animated" ><i class="fas fa-chevron-left"></i> Back</a>
       <a href="user-main-page.html" class="btn mt-3 mb-1 greet-text fadeOutUp animated" > All Menu </a>
 
     <footer id="sticky-footer" class="mt-3 py-4 bg-light green-bg text-black-70">
